crates/ty_python_semantic/resources/mdtest/snapshots/function.md_-_Call_expression_-_Wrong_argument_type_-_Diagnostics_for_unio…_(5396a8f9e7f88f71).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: function.md - Call expression - Wrong argument type - Diagnostics for union types where the union is not assignable
mdtest path: crates/ty_python_semantic/resources/mdtest/call/function.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Sized
 2 | 
 3 | class Foo: ...
 4 | class Bar: ...
 5 | class Baz: ...
 6 | 
 7 | def f(x: Sized): ...
 8 | def g(
 9 |     a: str | Foo,
10 |     b: list[str] | str | dict[str, str] | tuple[str, ...] | bytes | frozenset[str] | set[str] | Foo,
11 |     c: list[str] | str | dict[str, str] | tuple[str, ...] | bytes | frozenset[str] | set[str] | Foo | Bar,
12 |     d: list[str] | str | dict[str, str] | tuple[str, ...] | bytes | frozenset[str] | set[str] | Foo | Bar | Baz,
13 | ):
14 |     f(a)  # error: [invalid-argument-type]
15 |     f(b)  # error: [invalid-argument-type]
16 |     f(c)  # error: [invalid-argument-type]
17 |     f(d)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `f` is incorrect
  --> src/mdtest_snippet.py:14:7
   |
12 |     d: list[str] | str | dict[str, str] | tuple[str, ...] | bytes | frozenset[str] | set[str] | Foo | Bar | Baz,
13 | ):
14 |     f(a)  # error: [invalid-argument-type]
   |       ^ Expected `Sized`, found `str | Foo`
15 |     f(b)  # error: [invalid-argument-type]
16 |     f(c)  # error: [invalid-argument-type]
   |
info: protocol member `__len__` is not defined on type `Foo`
info: ├── type `Foo` is not assignable to `Sized`
info: └── union element `Foo` is not assignable
info: Function defined here
 --> src/mdtest_snippet.py:7:5
  |
5 | class Baz: ...
6 |
7 | def f(x: Sized): ...
  |     ^ -------- Parameter declared here
8 | def g(
9 |     a: str | Foo,
  |

```

```
error[invalid-argument-type]: Argument to function `f` is incorrect
  --> src/mdtest_snippet.py:15:7
   |
13 | ):
14 |     f(a)  # error: [invalid-argument-type]
15 |     f(b)  # error: [invalid-argument-type]
   |       ^ Expected `Sized`, found `list[str] | str | dict[str, str] | ... omitted 5 union elements`
16 |     f(c)  # error: [invalid-argument-type]
17 |     f(d)  # error: [invalid-argument-type]
   |
info: protocol member `__len__` is not defined on type `Foo`
info: ├── type `Foo` is not assignable to `Sized`
info: └── union element `Foo` is not assignable
info: Function defined here
 --> src/mdtest_snippet.py:7:5
  |
5 | class Baz: ...
6 |
7 | def f(x: Sized): ...
  |     ^ -------- Parameter declared here
8 | def g(
9 |     a: str | Foo,
  |

```

```
error[invalid-argument-type]: Argument to function `f` is incorrect
  --> src/mdtest_snippet.py:16:7
   |
14 |     f(a)  # error: [invalid-argument-type]
15 |     f(b)  # error: [invalid-argument-type]
16 |     f(c)  # error: [invalid-argument-type]
   |       ^ Expected `Sized`, found `list[str] | str | dict[str, str] | ... omitted 6 union elements`
17 |     f(d)  # error: [invalid-argument-type]
   |
info: protocol member `__len__` is not defined on type `Foo`
info: ├── type `Foo` is not assignable to `Sized`
info: └── union element `Foo` is not assignable
info: Function defined here
 --> src/mdtest_snippet.py:7:5
  |
5 | class Baz: ...
6 |
7 | def f(x: Sized): ...
  |     ^ -------- Parameter declared here
8 | def g(
9 |     a: str | Foo,
  |

```

```
error[invalid-argument-type]: Argument to function `f` is incorrect
  --> src/mdtest_snippet.py:17:7
   |
15 |     f(b)  # error: [invalid-argument-type]
16 |     f(c)  # error: [invalid-argument-type]
17 |     f(d)  # error: [invalid-argument-type]
   |       ^ Expected `Sized`, found `list[str] | str | dict[str, str] | ... omitted 7 union elements`
   |
info: protocol member `__len__` is not defined on type `Foo`
info: ├── type `Foo` is not assignable to `Sized`
info: └── union element `Foo` is not assignable
info: Function defined here
 --> src/mdtest_snippet.py:7:5
  |
5 | class Baz: ...
6 |
7 | def f(x: Sized): ...
  |     ^ -------- Parameter declared here
8 | def g(
9 |     a: str | Foo,
  |

```
